--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Alexander Requelme",
   "license": "MIT",
   "readmeFilename": "README.md",
-  "main": "dist/index.ts", 
+  "main": "dist/index.ts",
   "scripts": {
     "start:dev": "tsc -w",
     "build": "tsc",
@@ -18,7 +18,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "keywords": [
-    "nestjs", "stripe"
+    "nestjs",
+    "stripe"
   ],
   "publishConfig": {
     "access": "public"
@@ -47,6 +48,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "29.5.0",
     "prettier": "3.0.0",
+    "stripe": "^13.8.0",
     "supertest": "6.3.3",
     "ts-jest": "29.1.0",
     "ts-node": "10.0.0",
