--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Alexander Requelme",
   "license": "MIT",
   "readmeFilename": "README.md",
-  "main": "dist/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "start:dev": "tsc -w",
     "build": "tsc",
